Adding comments for style.css sheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
     color: #ffffff;
 }
 
-/* Sets the background color of website */
+/* Sets the background color of website. */
 body {
     background-color: #d9dcd6;
 }
